--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="topnav">
         <p><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl#inbox">Gmail</a></p>
         <p><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl#inbox">image</a></p>
-        <p><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl#inbox"> <img id="grid" src="/assets/grid.png"/></a></p>
+        <p><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl#inbox"> <img id="grid" src="grid.png"/></a></p>
         <button id="btnconnexion">Connexion</button>
     </div>
 
@@ -24,7 +24,7 @@
 
 
     <div>
-        <img src="/assets/google-logo.png" id="logo" alt="googlelogo">
+        <img src="google-logo.png" id="logo" alt="googlelogo">
     </div>
 
     <div>
@@ -37,7 +37,7 @@
     </div>
 
     <div class="alertsigntext">
-        <img id="haltgif"src="/assets/dothefive_90x90t.gif" alt="googlelogo">
+        <img id="haltgif"src="othefive_90x90t.gif" alt="googlelogo">
         <p>5 GESTES "BARRIERE" pour freiner le coronavirus</p>
     </div>
 
