correction logo stop

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="alertsigntext">
-        <img id="haltgif"src="othefive_90x90t.gif" alt="googlelogo">
+        <img id="haltgif"src="stop.png" alt="stoplogo">
         <p>5 GESTES "BARRIERE" pour freiner le coronavirus</p>
     </div>
 
